# django-airports

./: .coveragerc  .gitignore  .landscape.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PYPIREADME.rst  README.md  README.rst  missing.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
airports/: __init__.py  admin.py  apps.py  conf.py  models.py
airports/locale/ru/LC_MESSAGES/: django.mo  django.po
airports/management/commands/: airports.py  airports_import.py
airports/migrations/: 0001_initial.py  0002_auto_20150805_1555.py  0002_auto_20180316_1357.py  0002_auto_20190225_0210.py  0003_auto_20180322_0026.py  0003_auto_20190321_1026.py  0004_alter_airport_id.py  0005_auto_20211222_0812.py  0006_auto_20211222_0837.py
airports/south_migrations/: 0001_initial.py
airports/tests/: settings.py  test_management.py  test_models.py
docs/: airports.management.commands.rst  airports.management.rst  airports.migrations.rst  airports.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
example/: .dockerignore  Dockerfile  README.md  README.rst  airports  docker-compose.linux.yml  docker-compose.yml  manage.py  requirements.txt  settings.py  setup-db.sh  urls.py
example/example/: settings.py  urls.py
example/fixtures/: initial_data.json
example/localsite/: settings.py  urls.py
example/templates/airports/: base.html
example/tests/: test_models.py
tests/: settings.py  test_commands.py  test_management.py  test_models.py  urls.py
