[metadata]
name = django-airports
version = 0.2.0
description = "It's like django-cities, but django-airports"
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Basil Shubin
author_email = basil.shubin@gmail.com
url = https://github.com/bashu/django-airports
download_url = https://github.com/bashu/django-airports
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-cities>=0.5
    requests

[options.packages.find]
exclude = example*

[options.extras_require]
develop =
    tox
    django
    pytest-django
    pytest
test =
    pytest-django
    pytest-cov
    pytest

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max-line-length = 88
# E203 and W503 have edge cases handled by black
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
